cursive-bootstrap/tests/ui/E-CON/E-CON-0083.cursive
// RUN: compile-fail
// DIAG: E-CON-0083
// SPEC: 14.2
// DESC: shared $Class where class has ~% or ~! methods

class Mutable {
    procedure mutate(~!) -> () { }
}

procedure use_shared(x: shared $Mutable) -> () { //~ ERROR E-CON-0083
}

public procedure main(move ctx: Context) -> i32 {
    return 0
}
